react/styles.css
.container {
  --base-font-size: 1rem;
  --small-font-size: calc(var(--base-font-size) * 0.8);
  --small-gap: calc(var(--base-font-size) / 4);
  --numeric-stepper-button-size: 25px;
  --numeric-stepper-input-size: 40px;
  --input-height: calc(var(--base-font-size) * 2);
  --disabled-color: #bbb;
}

.container :global(.vtex-rich-text-0-x-heading) {
  margin: var(--base-font-size) 0 0;
}

.container
  :local([data-testid='totalizer-container'] > [data-testid^='totalizer-']) {
  flex: 1;
}

.container :global(.flex.flex-wrap) {
  gap: var(--small-gap);
}

.container :global(.vtex-dropdown__help-text) {
  margin-top: var(--small-gap);
}

.container :local([data-testid='totalizer-value']),
.container :global(.vtex-styleguide-9-x-input) {
  font-size: var(--base-font-size);
  word-break: break-word;
}

.container .price,
.container :local([data-testid='totalizer-label']) {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.container .table {
  font-size: var(--small-font-size);
}

.container .table :global(.vtex-numeric-stepper__minus-button),
.container .table :global(.vtex-numeric-stepper__plus-button),
.container .table :global(.vtex-numeric-stepper__input) {
  height: var(--numeric-stepper-button-size);
  max-width: var(--numeric-stepper-button-size);
  font-size: var(--small-font-size);
  line-height: 1;
}

.container .table :global(.vtex-numeric-stepper__input) {
  max-width: var(--numeric-stepper-input-size);
}

.container :global(.strike) {
  color: var(--disabled-color);
}

.container .shippingEstimates {
  padding: 0;
  list-style-position: inside;
  margin: 0 0 0 calc(var(--base-font-size) / 2);
}

.container .table :global(#toolbar) {
  align-items: center;
}

.container :global(.vtex-input-prefix__group),
.container .table :global(#toolbar) :global(.vtex-button) {
  min-height: var(--input-height);
  max-height: var(--input-height);
}

.container .table :global(#toolbar) :global(.vtex-button) :global(.mr3) {
  display: none;
}

:global(.vtex-styleguide-9-x-popup) {
  z-index: 2147483648 !important;
}

.containerToggle {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 10px;
  width: fit-content;
}

.containerToggle input {
  width: 611px;
  height: 30px;
}

:global(#toggle-autocomplete) {
  width: fit-content;
}

.containerToggle label {
  width: 100%;
}

